# dota2-minify

./: .gitignore  .markdownlint.json  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Minify.spec  README.md  commit_log.md  dota2-minify.code-workspace  gui.pyw  helper.py  helper_n.py  imgui.py  locale_text.csv  minify-base-attacks-blacklist.txt  misc-optimization-blacklist.txt  mod_convars.json  mpaths.py  mute-ambient-sounds-blacklist.txt  mute-announcers-blacklist.txt  mute-taunt-sounds-blacklist.txt  pyproject.toml  readme.md  remove-foilage-blacklist.txt  remove-pinging-blacklist.txt  remove-sprays-blacklist.txt  remove-weather-effects-blacklist.txt  requirements.txt  state_persistence.json  utils_build.py  utils_gui.py  validatefiles.py  validatefiles_n.py  version
.github/: funding.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  delete-prereleases.yml  deploy.yml  docs.yml  mirror.yml  release.yml  releaseExperiment.yml  releaseRC.yml  release_candiate.yml  release_candidate.yml
.jules/: bolt.md
Minify/: Minify.spec  __main__.py  build.py  cli.py  conditions.py  cursor_manager.py  gui.py  helper.py  mpaths.py  updater.py  utils_build.py  utils_gui.py
Minify/browsers/: __init__.py
Minify/core/: base.py  config.py  conflict_analyzer.py  conflict_models.py  conflict_rules.py  constants.py  fs.py  localization.py  log.py  migrations.py  mods_shared.py  output.py  patch_priority.py  registry.py  steam.py  utils.py  vpk_utils.py
Minify/patch/: __init__.py  blacklist.py  manifest_utils.py  replacer.py  styling.py  unins.py  vpk_utils.py  xml_utils.py
Minify/ui/: announcements.py  checkboxes.py  conflicts.py  details.py  dev_tools.py  fonts.py  gui.py  localization.py  markdown.py  modal_shared.py  modals.py  settings.py  shared.py  terminal.py  theme.py  window.py
docs/: BUILD-macos.md  announcements.json  community-mods.html  community.html  community.js  index.html  index.js  mirror.js  mods.html  mods.js  style.css  sw.js
docs/wiki/: README.md  _navbar.md  _sidebar.md  development.md  index.html  style.css  troubleshooting_faq.md  tutorial.md
logs/: decompiler.txt
mods/: READ_BEFORE_EDITING.txt
mods/Auto Accept Match/: menu.xml  notes_en.txt  notes_es.txt  notes_ru.txt  notes_tr.txt  script_after_recompile.py  script_initial.py
mods/Auto Confirm Language Change/: notes_en.txt  notes_es.txt  notes_ru.txt  notes_tr.txt
mods/Custom Backgrounds/: notes_en.txt  notes_es.txt  notes_ru.txt  notes_tr.txt  script.py  script_after_recompile.py  (+1 more)
scripts/: Minify.spec  build_installer.ps1  installer.iss  localization_manager.py  mock_server.py  precommit.sh  prepare_release.py  symdump.py  version_util.py
tests/: conftest.py  test_conditions.py  test_conflict_analyzer.py  test_fs.py  test_fs_security.py  test_localization.py  test_log.py  test_steam.py  test_symdump.py  test_ui_settings.py  test_utils.py  test_vpk_utils.py  test_xml_utils.py
(+869 files in other folders)
